# learning_gl

./: .clang-tidy  .gitignore  CMakeLists.txt  learning_gl.rad_dbg  vcpkg.json
CMake/: StanderdProjectSettings.cmake  VersionInfo.in  windeployqt.cmake
resources/: fragment.frag  fragment.glsl  vertex.vert
scripts/: generate_linux.sh  generate_mingw-w64.bat  generate_msvc_ninja.bat
src/: CMakeLists.txt  buffer.cpp  buffer.hpp  buffer_layout.cpp  buffer_layout.hpp  defines.hpp  file_utils.cpp  file_utils.hpp  image_utils.cpp  image_utils.hpp  known-folders.cpp  known-folders.hpp  main.cpp  sdl_imgui_gl.cpp  sdl_imgui_gl.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp  win32_helper.cpp  win32_helper.hpp
src/platform/: platform_win32.cpp  platform_win32.hpp  win32_file_utils.hpp  win32_known_folders.hpp
src/platform/linux/: common.cpp  common.hpp  linux_file_utils.cpp  linux_file_utils.hpp  linux_known_folders.cpp  linux_known_folders.hpp
src/platform/win32/: common.cpp  common.hpp  win32_file_utils.cpp  win32_file_utils.hpp  win32_known_folders.cpp  win32_known_folders.hpp
tests/: CMakeLists.txt
